scala 2.12 -> 2.12, eclipse -> vs-code + metals, sbt 0.13.x -> 1.4.2

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
+# vs-code, bloop, metals
+.vscode/
+.bloop/
+.bsp/
+project/.bloop/
+.metals/
+
